--- a/room.html
+++ b/room.html
@@ -10,5 +10,23 @@
   <img src="assets/meat.png" class="corner meat bottom-right" />
   <img src="assets/bones.png" class="corner bones top-right" />
   <img src="assets/bones.png" class="corner bones bottom-left" />
+   <!-- Центрированный текст и кнопка -->
+   <div class="center-message">
+    <p>Спасибо, что поиграли в мою игру.<br />Волк пока спит.<br />Вернитесь позже.</p>
+    <button id="showPhotos">посмотреть фото</button>
+  </div>
+  <script>
+    const imageFiles = [
+      '1.jpg','2.jpg','3.jpg','4.jpg','5.jpg','6.jpg','7.jpg','8.jpg','9.jpg','10.jpg','11.jpg','13.jpg','14.jpg','15.jpg','16.jpg','17.jpg','18.jpg','19.jpg','20.jpg','21.jpg','22.jpg'
+    ];
+
+    document.getElementById('showPhotos').addEventListener('click', () => {
+      imageFiles.forEach((file, index) => {
+        setTimeout(() => {
+          const popup = window.open(`assets/${file}`, '', `width=600,height=600,left=${Math.floor(Math.random()*screen.availWidth)},top=${Math.floor(Math.random()*screen.availHeight)}`);
+        }, index * 400);
+      });
+    });
+  </script>
 </body>
 </html>
